[package]
name = "p2p_secure_chat"
version = "1.2.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
chacha20poly1305 = "0.10" 
anyhow = "1.0"
argon2 = "0.5"
bincode = "1.3"
chrono = "0.4"
hkdf = "0.12"
hmac = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets", "serde"] }
zeroize = { version = "1.7", features = ["derive"] }
rpassword = "7.0"
subtle = "2.4"